@@ -1,30 +1,40 @@
 package com.booleanuk.core;
 
+import java.util.ArrayList;
 import java.util.List;
+import java.util.stream.Collectors;
 
 public class Library {
-    List<Article> articles;
-    List<Book> books;
-    List<Newspaper> newspapers;
+//    List<Article> articles;
+//    List<Book> books;
+//    List<Newspaper> newspapers;
 
-    public void addToStock(Article item) {
-        this.articles.add(item);
+    List<ReadingItem> readingItems;
+
+    public Library() {
+        this.readingItems = new ArrayList<>();
     }
 
-    public void addToStock(Book item) {
-        this.books.add(item);
+    public void addToStock(ReadingItem item) {
+        this.readingItems.add(item);
     }
-
-    public void addToStock(Newspaper item) {
-        this.newspapers.add(item);
-    }
+//    public void addToStock(Article item) {
+//        this.articles.add(item);
+//    }
+//
+//    public void addToStock(Book item) {
+//        this.books.add(item);
+//    }
+//
+//    public void addToStock(Newspaper item) {
+//        this.newspapers.add(item);
+//    }
 
     // The following methods may contain code that you are unfamiliar with. The strange syntax of article -> something
     // is called a lambda expression (https://www.w3schools.com/java/java_lambda.asp)
-    public String checkInArticle(String title) {
-        List<Article> filtered = this.articles.stream()
-                .filter(article -> article.title.equals(title))
-                .toList();
+    public String checkInReadingItem(String title) {
+        List<ReadingItem> filtered = this.readingItems.stream()
+                .filter(readingItem -> readingItem.getTitle().equals(title)).collect(Collectors.toList());
 
         if (filtered.size() < 1) {
             return "item is not part of the library's collection";
@@ -33,10 +43,9 @@ public class Library {
         return filtered.get(0).checkIn();
     }
 
-    public String checkOutArticle(String title) {
-        List<Article> filtered = this.articles.stream()
-                .filter(article -> article.title.equals(title))
-                .toList();
+    public String checkOutReadingItem(String title) {
+        List<ReadingItem> filtered = this.readingItems.stream()
+                .filter(readingItem -> readingItem.getTitle().equals(title)).collect(Collectors.toList());
 
         if (filtered.size() < 1) {
             return "item is not part of the library's collection";
@@ -44,52 +53,76 @@ public class Library {
 
         return filtered.get(0).checkOut();
     }
-
-    public String checkInBook(String title) {
-        List<Book> filtered = this.books.stream()
-                .filter(book -> book.title.equals(title))
-                .toList();
-
-        if (filtered.size() < 1) {
-            return "item is not part of the library's collection";
-        }
-
-        return filtered.get(0).checkIn();
-    }
-
-    public String checkOutBook(String title) {
-        List<Book> filtered = this.books.stream()
-                .filter(book -> book.title.equals(title))
-                .toList();
-
-        if (filtered.size() < 1) {
-            return "item is not part of the library's collection";
-        }
-
-        return filtered.get(0).checkOut();
-    }
-
-    public String checkInNewspaper(String title) {
-        List<Newspaper> filtered = this.newspapers.stream()
-                .filter(newspaper -> newspaper.title.equals(title))
-                .toList();
-
-        if (filtered.size() < 1) {
-            return "item is not part of the library's collection";
-        }
-
-        return filtered.get(0).checkIn();
-    }
-
-    public String checkOutNewspaper(String title) {
-        List<Newspaper> filtered = this.newspapers.stream()
-                .filter(newspaper -> newspaper.title.equals(title))
-                .toList();
-
-        if (filtered.size() < 1) {
-            return "item is not part of the library's collection";
-        }
-
-        return filtered.get(0).checkOut();
-    }
+//    public String checkInArticle(String title) {
+//        List<Article> filtered = this.articles.stream()
+//                // lambders: .filter works like a loop
+//                .filter(article -> article.title.equals(title))
+//                .toList();
+//
+//        if (filtered.size() < 1) {
+//            return "item is not part of the library's collection";
+//        }
+//
+//        return filtered.get(0).checkIn();
+//    }
+//
+//    public String checkOutArticle(String title) {
+//        List<Article> filtered = this.articles.stream()
+//                .filter(article -> article.title.equals(title))
+//                .toList();
+//
+//        if (filtered.size() < 1) {
+//            return "item is not part of the library's collection";
+//        }
+//
+//        return filtered.get(0).checkOut();
+//    }
+//
+//    public String checkInBook(String title) {
+//        List<Book> filtered = this.books.stream()
+//                .filter(book -> book.title.equals(title))
+//                .toList();
+//
+//        if (filtered.size() < 1) {
+//            return "item is not part of the library's collection";
+//        }
+//
+//        return filtered.get(0).checkIn();
+//    }
+//
+//    public String checkOutBook(String title) {
+//        List<Book> filtered = this.books.stream()
+//                .filter(book -> book.title.equals(title))
+//                .toList();
+//
+//        if (filtered.size() < 1) {
+//            return "item is not part of the library's collection";
+//        }
+//
+//        return filtered.get(0).checkOut();
+//    }
+//
+//    public String checkInNewspaper(String title) {
+//        List<Newspaper> filtered = this.newspapers.stream()
+//                .filter(newspaper -> newspaper.title.equals(title))
+//                .toList();
+//
+//        if (filtered.size() < 1) {
+//            return "item is not part of the library's collection";
+//        }
+//
+//        return filtered.get(0).checkIn();
+//    }
+//
+//    public String checkOutNewspaper(String title) {
+//        List<Newspaper> filtered = this.newspapers.stream()
+//                .filter(newspaper -> newspaper.title.equals(title))
+//                .toList();
+//
+//        if (filtered.size() < 1) {
+//            return "item is not part of the library's collection";
+//        }
+//
+//        return filtered.get(0).checkOut();
+//    }
 }
